# grocery-api

./: .env.example  .gitignore  Dockerfile  NEXT.md  Pipfile  README.md  dev-entrypoint.sh  docker-compose.yml  manage.py  pyproject.toml
api/: admin.py  models.py  urls.py  views.py
api/filters/: __init__.py  household.py
api/household/: admin.py  model.py  serializer.py
api/ingredient/: admin.py  model.py  serializer.py  view.py
api/item/: admin.py  model.py  serializer.py  view.py
api/list/: admin.py  model.py  serializer.py  view.py
api/list_section/: admin.py  model.py
api/measurement/: admin.py  model.py  serializer.py  view.py
api/measurement_family/: admin.py  model.py  serializer.py
api/migrations/: 0001_initial.py  0002_household_item_list_listsection_measurement_recipe.py  0003_guser_household.py  0004_auto_20201030_2250.py  0005_auto_20201031_1659.py  0006_auto_20201031_1700.py  0007_list_referenceable.py  0008_measurement_form.py  0009_auto_20210421_2252.py  0010_alter_guser_id_alter_item_id_alter_list_id_and_more.py  0011_item_checked.py  0012_recipe_list.py  0013_alter_recipe_instructions.py  0014_tag_ingredient_item_ingredient_item_tags.py  0015_alter_ingredient_options.py  0016_list_tags_recipe_tags.py  0017_tag_on_type.py  0018_item_sequence.py  0019_alter_ingredient_purchasing_quantity.py
api/recipe/: admin.py  (+3 more)
database-init/: backup.sql  grocery-measurements.sql  seed.sql
docker/: docker-entrypoint.API.sh  wait_for_db_ready.py
docker_bootstrap/: jq.py  mkvirtualenv  start
grocery_api/: asgi.py  settings.py  urls.py  wsgi.py
(+17 files in other folders)
